Updated project pages and index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Portfolio Website</title>
+    <title>Nandana K - Portfolio Website</title>
     <link rel="stylesheet" href="style.css">
 <script src="https://kit.fontawesome.com/4f1f6ae666.js" crossorigin="anonymous"></script>
 </head>
@@ -16,12 +16,13 @@
                 <li><a href="#header">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#portfolio">My Technical Area</a></li>
+                <li><a href="#certifications">Certifications</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
         <div class="header-text">
-            <p>Data Analyst</p>
+            <p>Data Science Student</p>
             <h1>Hey, myself <span>Nandana</span></h1>
         </div>
     </div>
@@ -46,14 +47,14 @@
                 <ul>
                     <li><span>Machine Learning</span><br>Supervised & unsupervised learning, model training and evaluation, regression/classification algorithms</li>
                     <li><span>Programming Languages</span><br>Python, R, Java, SQL, C</li>
-                    <li><span>Web Development</span><br>HTML, CSS, JavaScript, Flask, Django</li>
-                    <li><span>Data Science & Analytics</span><br>Data analysis, visualization, and insights using Python and Power BI.</li>
+                    <li><span>Web Development</span><br>HTML, CSS, JavaScript, Flask</li>
+                    <li><span>Data Science & Tools</span><br>Data analysis and visualization, Generative AI, Power BI.</li>
                     <li><span>Soft Skills</span><br>Problem Solving, Critical Thinking, Communication, Leadership, Collaboration</li>
                 </ul>
             </div>
             <div class="tab-contents" id="experience">
                 <ul>
-                    <li><span>Internship at PaceLab - June 2025 (Ongoing)</span><br>Assisted in developing and optimizing AI models, performed data preprocessing, and collaborated with teams to implement AI-driven solutions.</li>
+                    <li><span>Internship at PaceLab - June 2025 </span><br>Assisted in developing and optimizing AI models, performed data preprocessing, and collaborated with teams to implement AI-driven solutions.</li>
                     <li><span>Micro Internship at TATA Global Internships - March 2025</span><br>Completed a micro internship focused on Data Visualization: Empowering Business with Effective Insights, gaining hands-on experience in extracting, analyzing, and visualizing business data.</li>
                 </ul>
             </div> 
@@ -68,64 +69,150 @@
         </div>
     </div>
    </div>
-   <div id="portfolio">
+  <div id="portfolio">
     <div class="container">
-        <h1 class="subtitle">My Technical Area</h1>
+        <h1 class="subtitle">My Technical Profiles</h1>
         <div class="worklist">
-            <div class="work">
-                <a href="http://leetcode.com/profile">
-                <img src="LeetCode_logo.png" class="logo2">
-                <figcaption>leetcode</figcaption>
-                </a>
-            </div>
-            <div class="work">
-                <a href="https://www.hackerrank.com/profile/nandanak267">
-                <img src="hackerrank_logo.png" class="logo3">
-                <figcaption>  1798 hackos</figcaption>
-                </a>
-            </div>
-            <div class="work">
-                <a href="https://github.com/ig-quinzel">
-                <img src="Github-Logo-Transparent-Background-PNG.png" class="logo4">
-                <figcaption>Github</figcaption>
-                </a>
-            </div>
-            <div class="work">
-                <a href="nandana-resume (1).pdf">
-                <img src="resume.png" class="logo3">
-                <figcaption>Resume</figcaption>
-                </a>
-            </div>
+            <!-- LeetCode -->
+            
+
+
+<div class="work">
+  <a href="https://github.com/ig-quinzel" target="_blank">
+    <img src="Github-Logo-Transparent-Background-PNG.png" alt="GitHub">
+    <h3>GitHub</h3>
+    <p>AI/ML + front end projects. Active contributor.</p>
+  </a>
+</div>
+<div class="work">
+  <a href="https://www.hackerrank.com/nandanak267" target="_blank">
+    <img src="hackerrank_logo.png" alt="HackerRank">
+    <h3>HackerRank</h3>
+    <p>1800+ Hackos on HackerRank | 150+ Problems Solved It pushed me to think fast and write optimized code under tight deadlines.</p>
+  </a>
+</div>
+
+ <div class="work">
+  <a href="https://leetcode.com/your_username/" target="_blank">
+    <img src="LeetCode_logo.png" alt="LeetCode">
+    <h3>LeetCode</h3>
+    <p>50+ problems solved. Focus on DSA, arrays, graphs & dynamic programming.</p>
+  </a>
+</div>
+<div class="work">
+  <a href="https://www.geeksforgeeks.org/user/nandan2ijq/" target="_blank">
+    <img src="gfg-logo.png" alt="GeeksforGeeks">
+    <h3>GeeksforGeeks</h3>
+    <p>60+ problems solved. DSA, placement prep, and certifications. Regular learner and quiz solver.</p>
+  </a>
+</div>  
+<div class="work">
+  <a href="nandana-resume (1).pdf" download>
+    <img src="resume.png" alt="Resume">
+    <h3>Resume</h3>
+    <p>Click to download my resume</p>
+  </a>
+</div>
+          
         </div>
+    </div>
+</div>
+<div id="certifications">
+  <div class="container">
+    <h1 class="subtitle">Certifications</h1>
+    <div class="certification-list">
+      <div class="cert">
+        <i class="fa-solid fa-certificate"></i>
+        <h3>Mastering Generative AI and ChatGPT - GeeksforGeeks</h3>
+        <p>Completed a 5-weeks course on GenAI, ChatGPT and Transformers covering Hugging Face, summarization, and prompt engineering.</p>
+        <a href="https://media.geeksforgeeks.org/courses/certificates/aa92f61c0bc31f59c754f682179498ef.pdf" target="_blank">View Certificate</a>
+      </div>
+
+      <div class="cert">
+        <i class="fa-solid fa-certificate"></i>
+        <h3>Problem Solving Through Programming In C - NPTEL</h3>
+        <p>Certified by IIT faculty through NPTEL. Covered fundamentals of C programming, algorithmic thinking, and logic building.</p>
+        <a href="https://archive.nptel.ac.in/content/noc/NOC23/SEM2/Ecertificates/106/noc23-cs121/Course/NPTEL23CS121S53530037220269894.pdf" target="_blank">View Certificate</a>
+      </div>
+
+      <div class="cert">
+        <i class="fa-solid fa-certificate"></i>
+        <h3>Tata Group - Data Visualisation: Empowering Business with Effective Insights by Forage</h3>
+        <p>Completed a hands-on certification, focused on transforming data into actionable business insights. Key skills gained include framing business scenarios, data analysis and visualization, and effectively communicating analytical outcomes.</p>
+        <a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/ifobHAoMjQs9s6bKS/MyXvBcppsW2FkNYCX_ifobHAoMjQs9s6bKS_X897hLF4dr2rouxBu_1743315734120_completion_certificate.pdf" target="_blank">View Certificate</a>
+      </div>
 
     </div>
-   </div>
+  </div>
+</div>
+
 
    <div id="projects">
-    <div class="container">
-        <h1 class="subtitle">My Projects</h1>
-        <div class="projects-list">
-            <div>
-                <i class="fa-solid fa-code"></i>
-            <h2>Crime data cluster analysis</h2>
-            <p>K-Means clustering on crime data across different regions in Maharashtra to identify high-crime zones and patterns. Visualized clusters using matplotlib.</p>
-            <a href="https://github.com/ig-quinzel/crime-data-clustering">Learn More</a>
-            </div>
-            <div>
-                <i class="fa-solid fa-list"></i>
-            <h2>To-do list with folders</h2>
-            <p>A productivity app that lets users create folders, add tasks, set due dates, and organize to-dos efficiently with a clean UI.</p>
-            <a href="https://github.com/ig-quinzel/my-todo-app">Learn More</a>
-            </div>
-            <div>
-                <i class="fa-solid fa-train"></i>
-            <h2>MetroFlow</h2>
-            <p>Metro passenger flow analysis tool that predicts origin-destination patterns using fare data, aiding in transport planning and crowd management.</p>
-            <a href="https://github.com/ig-quinzel/MetroFlow-Passenger-s-Origin-Destination-Distribution-Prediction-Over-Metro-Networks">Learn More</a>
-            </div>
-        </div>
+  <div class="container">
+    <h1 class="subtitle">My Projects</h1>
+
+    <!-- Project Grid -->
+    <!-- Project Grid -->
+<div class="projects-list" id="initial-projects">
+  <!-- ✅ First 3 visible projects -->
+  <div class="project">
+    <img src="business.png" class="project-img" alt="AI Meeting Summariser">
+    <h2>AI Meeting Summariser</h2>
+    <p>Automated tool that transcribes and summarizes meeting audio using Hugging Face and Whisper.</p>
+    <a href="project-meeting.html">Learn More</a>
+  </div>
+
+  <div class="project">
+    <img src="24644947_Tiny doctors studying huge human heart.jpg" class="project-img" alt="Health Risk Predictor">
+    <h2>Smart Heart Disease Risk Predictor</h2>
+    <p>Predicts heart disease risk based on user inputs using ML. Includes dashboards and insights.</p>
+    <a href="project-heart.html">Learn More</a>
+  </div>
+
+  <div class="project">
+    <img src="metro.png" class="project-img" alt="MetroFlow">
+    <h2>MetroFlow</h2>
+    <p>Predicts metro passenger flow using fare data. Assists in planning and crowd management.</p>
+    <a href="project-metroflow.html">Learn More</a>
+  </div>
+</div>
+
+<!-- Hidden Projects -->
+<div class="projects-list more-projects" id="more-projects" style="display: none;">
+  <div class="project">
+    <img src="crime4.jpg" class="project-img" alt="Crime Cluster Analysis">
+    <h2>Crime Data Cluster Analysis</h2>
+    <p>K-Means clustering on crime data in Maharashtra. Helps identify and visualize crime hotspots.</p>
+    <a href="project-crime.html">Learn More</a>
+  </div>
+
+  <div class="project">
+    <img src="todo.png" class="project-img" alt="To-do List">
+    <h2>To-do List with Folders</h2>
+    <p>A web-based to-do manager with folder support, due dates, and intuitive UI design.</p>
+    <a href="project-todo.html">Learn More</a>
+  </div>
+
+  <div class="project">
+    <img src="11669710_20943884.jpg" class="project-img" alt="Fake News Detection">
+    <h2>Fake News Detection</h2>
+    <p>ML pipeline that classifies news as fake or real using TF-IDF and ensemble models.</p>
+    <a href="project-fakenews.html">Learn More</a>
+  </div>
+</div>
+
+
+    <!-- Show More Button -->
+    <div style="text-align: center; margin-top: 30px;">
+      <button onclick="toggleProjects()" id="showMoreBtn" style="padding: 12px 30px; background-color: #ff004f; color: white; border: none; border-radius: 6px; font-size: 16px; cursor: pointer;">
+        Show More
+      </button>
     </div>
-   </div>
+  </div>
+</div>
+
+
+
    <div id="contact">
     <div class="container">
         <div class="row">
@@ -147,19 +234,6 @@
         </div>
     </div>
    </div>
-   <script>
-    var tablinks=document.getElementsByClassName("tab-links");
-    var tabcontents=document.getElementsByClassName("tab-contents");
-    function opentab(tabname){
-        for(tablink of tablinks){
-            tablink.classList.remove("active-link");
-        }
-        for(tabcontent of tabcontents){
-            tabcontent.classList.remove("active-tab");
-        }
-        event.currentTarget.classList.add("active-link");
-        document.getElementById(tabname).classList.add("active-tab");
-    } 
-   </script>
+<script src="script.js"></script>
 </body>
 </html>
