Updated project pages and index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <div id="header">
     <div class="container">
         <nav>
-            <img src="logo.png" class="logo">
+            <img src="images/logo.png" class="logo">
             <ul>
                 <li><a href="#header">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -31,7 +31,7 @@
     <div class="container">
         <div class="row">
             <div class="aboutcol1">
-            <img src="about.JPG" >
+            <img src="images/about.JPG" >
             </div>
             <div class="aboutcol2">
                 <h1 class="subtitle">About Me</h1>
@@ -79,14 +79,14 @@
 
 <div class="work">
   <a href="https://github.com/ig-quinzel" target="_blank">
-    <img src="Github-Logo-Transparent-Background-PNG.png" alt="GitHub">
+    <img src="images/Github-Logo-Transparent-Background-PNG.png" alt="GitHub">
     <h3>GitHub</h3>
     <p>AI/ML + front end projects. Active contributor.</p>
   </a>
 </div>
 <div class="work">
   <a href="https://www.hackerrank.com/nandanak267" target="_blank">
-    <img src="hackerrank_logo.png" alt="HackerRank">
+    <img src="images/hackerrank_logo.png" alt="HackerRank">
     <h3>HackerRank</h3>
     <p>1800+ Hackos on HackerRank | 150+ Problems Solved It pushed me to think fast and write optimized code under tight deadlines.</p>
   </a>
@@ -94,21 +94,21 @@
 
  <div class="work">
   <a href="https://leetcode.com/your_username/" target="_blank">
-    <img src="LeetCode_logo.png" alt="LeetCode">
+    <img src="images/LeetCode_logo.png" alt="LeetCode">
     <h3>LeetCode</h3>
     <p>50+ problems solved. Focus on DSA, arrays, graphs & dynamic programming.</p>
   </a>
 </div>
 <div class="work">
   <a href="https://www.geeksforgeeks.org/user/nandan2ijq/" target="_blank">
-    <img src="gfg-logo.png" alt="GeeksforGeeks">
+    <img src="images/gfg-logo.png" alt="GeeksforGeeks">
     <h3>GeeksforGeeks</h3>
     <p>60+ problems solved. DSA, placement prep, and certifications. Regular learner and quiz solver.</p>
   </a>
 </div>  
 <div class="work">
   <a href="nandana-resume (1).pdf" download>
-    <img src="resume.png" alt="Resume">
+    <img src="images/resume.png" alt="Resume">
     <h3>Resume</h3>
     <p>Click to download my resume</p>
   </a>
@@ -156,48 +156,48 @@
 <div class="projects-list" id="initial-projects">
   <!-- ✅ First 3 visible projects -->
   <div class="project">
-    <img src="business.png" class="project-img" alt="AI Meeting Summariser">
+    <img src="images/business.png" class="project-img" alt="AI Meeting Summariser">
     <h2>AI Meeting Summariser</h2>
     <p>Automated tool that transcribes and summarizes meeting audio using Hugging Face and Whisper.</p>
-    <a href="project-meeting.html">Learn More</a>
+    <a href="templates/project-meeting.html">Learn More</a>
   </div>
 
   <div class="project">
-    <img src="24644947_Tiny doctors studying huge human heart.jpg" class="project-img" alt="Health Risk Predictor">
+    <img src="images/24644947_Tiny doctors studying huge human heart.jpg" class="project-img" alt="Health Risk Predictor">
     <h2>Smart Heart Disease Risk Predictor</h2>
     <p>Predicts heart disease risk based on user inputs using ML. Includes dashboards and insights.</p>
-    <a href="project-heart.html">Learn More</a>
+    <a href="templates/project-heart.html">Learn More</a>
   </div>
 
   <div class="project">
-    <img src="metro.png" class="project-img" alt="MetroFlow">
+    <img src="images/metro.png" class="project-img" alt="MetroFlow">
     <h2>MetroFlow</h2>
     <p>Predicts metro passenger flow using fare data. Assists in planning and crowd management.</p>
-    <a href="project-metroflow.html">Learn More</a>
+    <a href="templates/project-metroflow.html">Learn More</a>
   </div>
 </div>
 
 <!-- Hidden Projects -->
 <div class="projects-list more-projects" id="more-projects" style="display: none;">
   <div class="project">
-    <img src="crime4.jpg" class="project-img" alt="Crime Cluster Analysis">
+    <img src="images/crime4.jpg" class="project-img" alt="Crime Cluster Analysis">
     <h2>Crime Data Cluster Analysis</h2>
     <p>K-Means clustering on crime data in Maharashtra. Helps identify and visualize crime hotspots.</p>
-    <a href="project-crime.html">Learn More</a>
+    <a href="templates/project-crime.html">Learn More</a>
   </div>
 
   <div class="project">
-    <img src="todo.png" class="project-img" alt="To-do List">
+    <img src="images/todo.png" class="project-img" alt="To-do List">
     <h2>To-do List with Folders</h2>
     <p>A web-based to-do manager with folder support, due dates, and intuitive UI design.</p>
-    <a href="project-todo.html">Learn More</a>
+    <a href="templates/project-todo.html">Learn More</a>
   </div>
 
   <div class="project">
-    <img src="11669710_20943884.jpg" class="project-img" alt="Fake News Detection">
+    <img src="images/11669710_20943884.jpg" class="project-img" alt="Fake News Detection">
     <h2>Fake News Detection</h2>
     <p>ML pipeline that classifies news as fake or real using TF-IDF and ensemble models.</p>
-    <a href="project-fakenews.html">Learn More</a>
+    <a href="templates/project-fakenews.html">Learn More</a>
   </div>
 </div>
 
@@ -224,10 +224,10 @@
                 <br>
                 <div class="socialmedia">
                     <a href="https://www.linkedin.com/in/nandana-k-3193a8265/">
-                        <img src="link.png" class="logo5">
+                        <img src="images/link.png" class="logo5">
                     </a>
                     <a href="https://www.instagram.com/_.nandanaaa.___/">
-                        <img src="insta.png"  class="logo5">
+                        <img src="images/insta.png"  class="logo5">
                     </a>
                 </div>
             </div>
