--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   <a href="https://leetcode.com/your_username/" target="_blank">
     <img src="images/LeetCode_logo.png" alt="LeetCode">
     <h3>LeetCode</h3>
-    <p>50+ problems solved. Focus on DSA, arrays, graphs & dynamic programming.</p>
+    <p>90+ problems solved. Focus on DSA, arrays, graphs & dynamic programming.</p>
   </a>
 </div>
 <div class="work">
@@ -107,7 +107,7 @@
   </a>
 </div>  
 <div class="work">
-  <a href="nandana-resume (1).pdf" download>
+  <a href="nandana-resume.pdf" download>
     <img src="images/resume.png" alt="Resume">
     <h3>Resume</h3>
     <p>Click to download my resume</p>
@@ -161,7 +161,12 @@
     <p>Automated tool that transcribes and summarizes meeting audio using Hugging Face and Whisper.</p>
     <a href="templates/project-meeting.html">Learn More</a>
   </div>
-
+<div class="project">
+    <img src="images/metro.png" class="project-img" alt="MetroFlow">
+    <h2>MetroFlow</h2>
+    <p>Predicts metro passenger flow using fare data. Assists in planning and crowd management.</p>
+    <a href="templates/project-metroflow.html">Learn More</a>
+  </div>
   <div class="project">
     <img src="images/24644947_Tiny doctors studying huge human heart.jpg" class="project-img" alt="Health Risk Predictor">
     <h2>Smart Heart Disease Risk Predictor</h2>
@@ -169,12 +174,7 @@
     <a href="templates/project-heart.html">Learn More</a>
   </div>
 
-  <div class="project">
-    <img src="images/metro.png" class="project-img" alt="MetroFlow">
-    <h2>MetroFlow</h2>
-    <p>Predicts metro passenger flow using fare data. Assists in planning and crowd management.</p>
-    <a href="templates/project-metroflow.html">Learn More</a>
-  </div>
+  
 </div>
 
 <!-- Hidden Projects -->
@@ -185,7 +185,12 @@
     <p>K-Means clustering on crime data in Maharashtra. Helps identify and visualize crime hotspots.</p>
     <a href="templates/project-crime.html">Learn More</a>
   </div>
-
+<div class="project">
+    <img src="images/11669710_20943884.jpg" class="project-img" alt="Fake News Detection">
+    <h2>Fake News Detection</h2>
+    <p>ML pipeline that classifies news as fake or real using TF-IDF and ensemble models.</p>
+    <a href="templates/project-fakenews.html">Learn More</a>
+  </div>
   <div class="project">
     <img src="images/todo.png" class="project-img" alt="To-do List">
     <h2>To-do List with Folders</h2>
@@ -193,12 +198,7 @@
     <a href="templates/project-todo.html">Learn More</a>
   </div>
 
-  <div class="project">
-    <img src="images/11669710_20943884.jpg" class="project-img" alt="Fake News Detection">
-    <h2>Fake News Detection</h2>
-    <p>ML pipeline that classifies news as fake or real using TF-IDF and ensemble models.</p>
-    <a href="templates/project-fakenews.html">Learn More</a>
-  </div>
+  
 </div>
 
 
