--- a/index.html
+++ b/index.html
@@ -78,40 +78,39 @@
 
 
 <div class="work">
-  <a href="https://github.com/ig-quinzel" target="_blank">
+  
     <img src="images/Github-Logo-Transparent-Background-PNG.png" alt="GitHub">
     <h3>GitHub</h3>
-    <p>AI/ML + front end projects. Active contributor.</p>
-  </a>
+    <p>Active contributor to AI/ML and frontend projects. Explore real-world applications and open-source work.</p>
+  <a href="https://github.com/ig-quinzel" target="_blank" class="button">View My GitHub</a>
 </div>
 <div class="work">
-  <a href="https://www.hackerrank.com/nandanak267" target="_blank">
+  
     <img src="images/hackerrank_logo.png" alt="HackerRank">
     <h3>HackerRank</h3>
     <p>1800+ Hackos on HackerRank | 150+ Problems Solved It pushed me to think fast and write optimized code under tight deadlines.</p>
-  </a>
+  <a href="https://www.hackerrank.com/nandanak267" target="_blank">View Account</a>
 </div>
 
  <div class="work">
-  <a href="https://leetcode.com/your_username/" target="_blank">
+  
     <img src="images/LeetCode_logo.png" alt="LeetCode">
     <h3>LeetCode</h3>
-    <p>90+ problems solved. Focus on DSA, arrays, graphs & dynamic programming.</p>
-  </a>
+    <p>100+ problems solved. Focus on DSA, arrays, graphs & dynamic programming.</p>
+  <a href="https://leetcode.com/your_username/" target="_blank">View Account</a>
 </div>
 <div class="work">
-  <a href="https://www.geeksforgeeks.org/user/nandan2ijq/" target="_blank">
+  
     <img src="images/gfg-logo.png" alt="GeeksforGeeks">
     <h3>GeeksforGeeks</h3>
     <p>60+ problems solved. DSA, placement prep, and certifications. Regular learner and quiz solver.</p>
-  </a>
+  <a href="https://www.geeksforgeeks.org/user/nandan2ijq/" target="_blank">View Account</a>
 </div>  
 <div class="work">
-  <a href="nandana-resume.pdf" download>
+  
     <img src="images/resume.png" alt="Resume">
     <h3>Resume</h3>
-    <p>Click to download my resume</p>
-  </a>
+  <a href="nandana-resume.pdf" download>Click to download my resume</a>
 </div>
           
         </div>
