--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   
     <img src="images/hackerrank_logo.png" alt="HackerRank">
     <h3>HackerRank</h3>
-    <p>4000+ Hackos on HackerRank | 150+ Problems Solved It pushed me to think fast and write optimized code under tight deadlines.</p>
+    <p>4000+ Hackos on HackerRank | 130+ Problems Solved. It pushed me to think fast and write optimized code under tight deadlines.</p>
   <a href="https://www.hackerrank.com/nandanak267" target="_blank">View Account</a>
 </div>
 
@@ -96,7 +96,7 @@
   
     <img src="images/LeetCode_logo.png" alt="LeetCode">
     <h3>LeetCode</h3>
-    <p>100+ problems solved. Focus on DSA, arrays, graphs & dynamic programming.</p>
+    <p>150+ problems solved. Focused on DSA, arrays, graphs & dynamic programming.</p>
   <a href="https://leetcode.com/your_username/" target="_blank">View Account</a>
 </div>
 <div class="work">
