--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <div id="header">
     <div class="container">
         <nav>
-            <img src="images/logo.png" class="logo">
+            <img src="images/1234.png" class="logo">
             <ul>
                 <li><a href="#header">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -39,10 +39,10 @@
                 <p>Established the Game Development Club at college, actively served in multiple student organizations, and played a key role in organizing both technical and cultural fests. Whether it's analyzing complex datasets, designing intuitive user experiences, or collaborating in hackathons, I’m always excited to challenge myself and grow.</p>
                 <p>Outside of coding, I enjoy gaming, dancing, travelling and being actively involved in college activities. My goal is to keep learning, stay inspired, and build impactful projects that make a difference.</p>
             <div class="tab-titles">
-                <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
-                <p class="tab-links" onclick="opentab('experience')">Experience</p>
-                <p class="tab-links" onclick="opentab('education')">Education</p>
-            </div>
+    <button class="tab-links active-link" onclick="opentab('skills', event)">Skills</button>
+    <button class="tab-links" onclick="opentab('experience', event)">Experience</button>
+    <button class="tab-links" onclick="opentab('education', event)">Education</button>
+</div>
             <div class="tab-contents active-tab" id="skills">
                 <ul>
                     <li><span>Machine Learning</span><br>Supervised & unsupervised learning, model training and evaluation, regression/classification algorithms</li>
@@ -88,7 +88,7 @@
   
     <img src="images/hackerrank_logo.png" alt="HackerRank">
     <h3>HackerRank</h3>
-    <p>4000+ Hackos on HackerRank | 130+ Problems Solved. It pushed me to think fast and write optimized code under tight deadlines.</p>
+    <p>4000+ Hackos on HackerRank. 130+ Problems Solved. It pushed me to think fast and write optimized code under tight deadlines.</p>
   <a href="https://www.hackerrank.com/nandanak267" target="_blank">View Account</a>
 </div>
 
