--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                 <ul>
                     <li><span>Machine Learning</span><br>Supervised & unsupervised learning, model training and evaluation, regression/classification algorithms</li>
                     <li><span>Programming Languages</span><br>Python, R, Java, SQL, C</li>
-                    <li><span>Web Development</span><br>HTML, CSS, JavaScript, Flask</li>
-                    <li><span>Data Science & Tools</span><br>Data analysis and visualization, Generative AI, Power BI.</li>
+                    <li><span>Web Development</span><br>HTML, CSS, Flask</li>
+                    <li><span>Data Science & Tools</span><br>Data analysis and visualization, Power BI.</li>
                     <li><span>Soft Skills</span><br>Problem Solving, Critical Thinking, Communication, Leadership, Collaboration</li>
                 </ul>
             </div>
@@ -88,7 +88,7 @@
   
     <img src="images/hackerrank_logo.png" alt="HackerRank">
     <h3>HackerRank</h3>
-    <p>4000+ Hackos on HackerRank. 130+ Problems Solved. It pushed me to think fast and write optimized code under tight deadlines.</p>
+    <p>5000+ Hackos on HackerRank. 130+ Problems Solved. It pushed me to think fast and write optimized code under tight deadlines.</p>
   <a href="https://www.hackerrank.com/nandanak267" target="_blank">View Account</a>
 </div>
 
@@ -150,10 +150,7 @@
   <div class="container">
     <h1 class="subtitle">My Projects</h1>
 
-    <!-- Project Grid -->
-    <!-- Project Grid -->
 <div class="projects-list" id="initial-projects">
-  <!-- ✅ First 3 visible projects -->
   <div class="project">
     <img src="images/business.png" class="project-img" alt="AI Meeting Summariser">
     <h2>AI Meeting Summariser</h2>
