--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <img src="images/LeetCode_logo.png" alt="LeetCode">
     <h3>LeetCode</h3>
     <p>180+ problems solved. Focused on DSA, arrays, graphs & dynamic programming.</p>
-  <a href="https://leetcode.com/your_username/" target="_blank">View Account</a>
+  <a href="https://leetcode.com/u/Nandanak27/" target="_blank">View Account</a>
 </div>
 <div class="work">
   
